--- a/app/globals.css
+++ b/app/globals.css
@@ -3,25 +3,48 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --primary-hue: 85;
+
+  --primary: var(--primary-hue), 61%, 21%;
+  --accent: var(--primary-hue), 41%, 41%;
+
+  --dark: 0, 0%, 8%;
+  --light: var(--primary-hue), 100%, 92%;
+
+  --content-w: 40rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+html {
+  box-sizing: border-box;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: hsl(var(--light));
+  background-color: hsl(var(--dark));
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: space-between;
+  padding-top: 2rem;
+}
+
+.navigation__container {
+  background-color: hsl(var(--primary));
+  position: fixed;
+  width: 100vw;
+  top: 0;
+  border-bottom: 2px solid hsl(var(--accent));
+  display: flex;
+  justify-content: center;
+}
+
+.navigation__content {
+  width: var(--content-w);
+  display: flex;
+  justify-content: space-between;
+}
+
+.post__container {
+  width: var(--content-w);
+  margin: auto;
 }
