--- a/app/globals.css
+++ b/app/globals.css
@@ -24,18 +24,21 @@ body {
   flex-direction: column;
   min-height: 100vh;
   justify-content: space-between;
-  padding-top: 2rem;
+  background-color: hsl(var(--primary), .4);
+    padding-top: 2rem;
 }
 
 .navigation__container {
-  padding-block: 1rem;
-  background-color: hsl(var(--primary), .4);
+  background-image: linear-gradient(to bottom,  hsl(var(--dark)) -170%, hsl(var(--light), .7) 65%), url('/assets/mtwashington.png');
+  background-position: center center;
+  background-size: 60vw;
+  background-color: hsl(var(--light));
   position: fixed;
   width: 100vw;
   top: 0;
   border-bottom: 2px solid hsl(var(--accent));
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .navigation__content {
@@ -55,11 +58,11 @@ body {
 
 .brand {
   color: hsl(var(--primary));
-  font-weight: 700;
-  font-variant: small-caps;
 }
 
-.active {
-  /* visibility: hidden; */
-  display: none;
+.brand div span {
+  font-weight: 700;
+  font-variant: small-caps;
+  line-height: .8;
+  font-size: 1.3rem;
 }
