--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --primary-hue:   85;
+  --primary-hue:   285;
 
   --primary: var(--primary-hue), 85%, 19%;
   --accent: var(--primary-hue), 55%, 39%;
@@ -120,7 +120,6 @@ footer {
   margin-inline: auto;
   background-color: hsl(var(--light));
   padding: 2rem;
-  border-radius: 1rem;
   box-shadow: 0 5px 12px -4px hsl(var(--dark), .8);
 }
 
@@ -128,7 +127,7 @@ footer {
 .post__container {
   background-color: whitesmoke;
   letter-spacing: 1.2px;
-  border-radius: 1rem;
+  border-radius: .5rem;
   overflow: hidden;
   box-shadow: 0 3px 5px -2px hsl(var(--dark), .8);
   position: relative;
@@ -240,4 +239,43 @@ footer {
 
 #link-container li {
   transition: .5s width ease;
+}
+
+.post__container--preview {
+  overflow: hidden;
+  max-height: 20rem;
+  position: relative;
+}
+
+.post__container--preview::after {
+  content: '';
+  width: 100%;
+  height: 20%;
+  background-image: linear-gradient(to bottom, transparent, white);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 10;
+  pointer-events: none;
+  }
+
+  .post__container {
+    transition: height .5s ease;
+  }
+
+.post__container--preview::before {
+  content: 'See more...';
+  width: auto;
+  height: auto;
+  position: absolute;
+  font-weight: 700;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: .5rem;
+  z-index: 11;
+  color: hsl(var(--primary));
+  font-size: .7rem;
+  font-style: italic;
+  pointer-events: none;
+  cursor: pointer;
 }
