--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --primary-hue:   285;
+  --primary-hue: 0;
 
   --primary: var(--primary-hue), 85%, 19%;
   --accent: var(--primary-hue), 55%, 39%;
@@ -257,11 +257,11 @@ footer {
   bottom: 0;
   z-index: 10;
   pointer-events: none;
-  }
+}
 
-  .post__container {
-    transition: height .5s ease;
-  }
+.post__container {
+  transition: height .5s ease;
+}
 
 .post__container--preview::before {
   content: 'See more...';
@@ -277,5 +277,8 @@ footer {
   font-size: .7rem;
   font-style: italic;
   pointer-events: none;
-  cursor: pointer;
+}
+
+.post__container a:hover h1 {
+  color: hsl(var(--accent), .9);
 }
